# yaml2kg

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  visual.py  yaml2kg.py
json/: particle_properties.json  rest_lessvariables.json
src/yaml2kg/: yaml2kg.py
