[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml2kg"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{name = "Ludwig Krämer", email = "ludwigkraemer2@gmail.com"}]
description = "Convert  LHCb NTuple Wizard YAML files to Knowledge Graphs"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx==3.2.1", 
    "numpy==1.26.2", 
    "pyvis @ git+https://github.com/ludw1/pyvis", 
    "pyyaml==6.0.1", 
    "requests==2.32.3",
    ]
keywords = ["LHCb", "Knowledge Graph", "YAML"]
[project.urls]
homepage = "https://github.com/ludw1/yaml2kg"
issues = "https://github.com/ludw1/yaml2kg/issues"
[project.scripts]
yaml2kg = "yaml2kg.yaml2kg:main"